log
Thu 09 May 2024 08:40:12 PM UTC: 
 tests:  1|8
total_score: 0/70
0f5cf19
Thu 09 May 2024 09:10:32 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
9b67084
Thu 09 May 2024 09:47:54 PM UTC: 
 treemap.c | 45 +++++++++++++++++++++++++++++++++++++++------
 1 file changed, 39 insertions(+), 6 deletions(-)
 tests:  6|6
total_score: 15/70
af80c10
Thu 09 May 2024 09:52:58 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
909c8e7
Thu 09 May 2024 09:56:31 PM UTC: 
 treemap.c | 31 ++++++++++++-------------------
 1 file changed, 12 insertions(+), 19 deletions(-)
In file included from test.c:4:
treemap.c:92:1: error: expected identifier or ‘(’ before ‘}’ token
   92 | }
      | ^
Compilation failed
781184c
